trunk/Archive2/78/4ca8d64a56ae3d/output
main.cpp:11:1: error: static assertion failed: 
 static_assert(arr[0] == 1, "");
 ^
